<resources>
    <string name="app_name">App Food</string>
    <string name="welcomeApp">Find the most delicious food with the best quality and free delivery here</string>

    <string name="first_slide">All your favorite</string>
    <string name="second_slide">Free delivery offers</string>
    <string name="third_slide">Choose your food</string>

    <string name="description">Order from the best local restaurants with easy, on-demand delivery.</string>

    <string name="nav_home">Home</string>
    <string name="nav_dailyMeal">Daily Meal</string>
    <string name="nav_favorite">My Orders</string>
    <string name="nav_cart">My Carts</string>
    <string name="nav_my">My Profile</string>
    <string name="nav_logout">Logout</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="time">10:00-23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="detailed_description">Chiếc pizza đến từ vùng đất Italy xinh đẹp đã khiến cho biết bao tín đồ ăn uống trên khắp thế giới phải “điên đảo”. Với hương vị thơm ngon đặc trưng, pizza ngày càng có nhiều biến tấu</string>
</resources>