<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item

            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_baseline_home_24" />
        <item
            android:id="@+id/nav_dailyMeal"
            android:title="@string/nav_dailyMeal"
            android:icon="@drawable/ic_baseline_set_meal_24" />
        <item
            android:id="@+id/nav_favorite"
            android:title="@string/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_24" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24" />
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/nav_my"
            android:icon="@drawable/ic_baseline_person_24" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24" />
    </group>

</menu>