<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ver_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="center"
            android:src="@drawable/pizzahaisan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/round_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".15" />


            <ImageView

                android:id="@+id/rtPizza"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/star_img"
                app:layout_constraintEnd_toEndOf="@id/tv_price"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/_5_0"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/rtPizza"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_access_time_filled_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/time"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_time"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/tv_dec_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Min - $"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".9"
                app:layout_constraintStart_toEndOf="@+id/img_time"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="45"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias=".9"
                app:layout_constraintStart_toEndOf="@+id/tv_dec_price"
                app:layout_constraintTop_toBottomOf="@+id/rtPizza" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>